--- a/Solemate/View/Base.lproj/Main.storyboard
+++ b/Solemate/View/Base.lproj/Main.storyboard
@@ -415,6 +415,9 @@
                                 <rect key="frame" x="237" y="679" width="89" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Next"/>
+                                <connections>
+                                    <action selector="nextOnPress:" destination="cfk-z1-SZP" eventType="touchUpInside" id="8bU-iu-eq0"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
